# LinkedIn-DataCenter-Jobs

./: .gitignore  About the Job.ipynb  About_the_job.ipynb  Data Processing.ipynb  Format and Extraction.ipynb  NER.ipynb  Raw_linkedin_jobs.csv  cookies.pkl  cookies.py  data_center_scarpper.ipynb  jobs_crawler.ipynb  main.py  new_crawler.ipynb  pyproject.toml  results.json  url_generator.py
Data V1/: Data Processing.ipynb
Data V2/: Data Processing.ipynb
Job Page Crawler/: crawler.py
LLM Pipeline/: GPT-4o-mini-Annotation.py  Inference.py  LLama-3.1-8B-Instruct-SFT.py  LLama-3.1-8B-Instruct.py  MultiGPU-Generation.py
LLM Pipeline/outputs/: README.md
Pictures/: Plot.ipynb
results/: results_AK.json  results_AL.json  results_Arizona.json  results_Arkansas.json  results_CA.json  results_Colorado.json  results_Connecticut.json  results_Delaware.json  results_District of Columbia.json  results_Florida.json  results_Georgia.json  results_Hawaii.json  results_Idaho.json  results_Illinois.json  results_Indiana.json  results_Iowa.json  results_Kansas.json  results_Kentucky.json  results_Louisiana.json  results_Maine.json  results_Maryland.json  results_Massachusetts.json  results_Michigan.json  results_Minnesota.json  results_Mississippi.json  results_Missouri.json  results_Montana.json  results_Nebraska.json  results_Nevada.json  results_New Hampshire.json  results_New Jersey.json  results_New Mexico.json  results_New York.json  results_North Carolina.json  results_North Dakota.json  results_Ohio.json  results_Oklahoma.json  results_Oregon.json  results_Pennsylvania.json  results_Rhode Island.json  (+11 more)
(+14 files in other folders)
